# fit-acquisition

./: .gitignore  README.md  class_names_orig.py  pyproject.toml
.github/workflows/: contract-tests.yml  e2e-tests.yml  integration-tests.yml  lint.yml  security-code.yml  type-check.yml  unit-tests.yml
fit_acquisition/: acquisition.py  class_names.py  logger.py  logger_names.py  post.py  task.py  task_info_ui.py  tasks_handler.py  tasks_info.py  tasks_info_ui.py  tasks_manager.py  test.py  timestamp_verifier.py
fit_acquisition/lang/: en.json  it.json
fit_acquisition/tasks/: task.py  task_worker.py  tasks_info.py  tasks_manager.py
fit_acquisition/tasks/infinite_loop/: packet_capture.py  packetcapture.py  screen_recorder.py  screenrecorder.py
fit_acquisition/tasks/nettools/: headers.py  nslookup.py  sslcertificate.py  sslkeylog.py  traceroute.py  whois.py
fit_acquisition/tasks/network_tools/: headers copy.py  headers.py  nslookup.py  sslcertificate.py  sslkeylog.py  traceroute.py  whois.py
fit_acquisition/tasks/post_acquisition/: hash.py  report.py  save_case_info.py  timestamp.py  zip_and_remove_folder.py
fit_acquisition/tasks/post_acquisition/pec/: pec.py  pec_and_download_eml.py
fit_acquisition/tasks/post_acquisition/report/: generate.py  report.py  task.py  test.txt
fit_acquisition/tests/: manual_test_run.py
fit_acquisition/tests/tasks/: tasks_ui.py
fit_acquisition/tests/tasks/infinite_loop/: packetcapture_test.py  screenrecoder_test.py  test_packet_capture.py  test_screen_recoder.py
fit_acquisition/tests/tasks/nettools/: headers_test.py  nslookup_test.py  sslcertificate_test.py  sslkeylog_test.py  traceroute_test.py  whois_test.py
fit_acquisition/tests/tasks/network_tools/: nslookup_test.py  sslcertificate_test.py  sslkeylog_test.py  test_headers.py  test_nslookup.py  test_sslcertificate.py  test_sslkeylog.py  test_traceroute.py  test_whois.py  traceroute_test.py  whois_test.py
fit_acquisition/tests/tasks/post_acquisition/: calculate_hash_test.py  pec_and_download_eml_test.py  report_test.py  save_case_info_test.py  test_hash.py  test_pec_and_download_eml_test.py  test_report.py  test_save_case_info.py  test_timestamp.py  test_zip_and_remove_folder.py  timestamp_test.py  zip_and_remove_folder_test.py
fit_acquisition/ui/: taskinfo.ui  tasks_info.ui
fit_acquisition/workers/: acquisition_workers.py
tests/: conftest.py
tests/contract/: test_task_contract.py  test_worker_contract.py  test_worker_error_payload_contract.py
tests/e2e/: test_tasks_info_e2e.py  test_tasks_manager_e2e.py
tests/integration/: test_hash.py  test_headers.py  test_nslookup.py  test_packet_capture.py  test_pec_and_download_eml_test.py  test_report.py  test_save_case_info.py  test_screen_recoder.py  test_sslcertificate.py  test_sslkeylog.py  test_timestamp.py  test_traceroute.py  test_whois.py  test_zip_and_remove_folder.py
tests/unit/: test_class_names.py  test_task_core.py  test_tasks_manager.py  test_worker_error_paths.py
