[tool.poetry]
name = "fit-acquisition"
version = "1.0.15"
description = "Utilities and base classes for content acquisition, shared across FIT scraper modules."
authors = ["FIT Project"]
license = "LGPL-3.0-or-later"
packages = [
    { include = "fit_acquisition" }
]

include = [
    "fit_assets/icons/info-circle.png",
    "fit_assets/templates/*.html",
    "fit_assets/images/logo-640x640.png"
]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
PySide6 = "6.9.0"
requests = "^2.31"
python-whois = "^0.9.5"
scapy = "^2.5.0"
nslookup = "^1.3.0"
xhtml2pdf = "^0.2.17"
jinja2 = "^3.1.6"
moviepy = "^2.1.2"
rfc3161ng = "^2.1.3"

fit-cases = {git = "https://github.com/fit-project/fit-cases.git", rev = "main"}
fit-configurations = {git = "https://github.com/fit-project/fit-configurations.git", rev = "main"}
pytest = "^8.4.1"
pytest-qt = "^4.5.0"
pypdf = "^5.8.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"