[tool.poetry]
name = "fit-acquisition"
version = "1.0.0"
description = "Utilities and base classes for content acquisition, shared across FIT scraper modules."
authors = ["FIT Project"]
license = "LGPL-3.0-or-later"
packages = [
    { include = "fit_acquisition" }
]

exclude = ["fit_acquisition/ui/**", "tests/**"]

include = [
    "fit_assets/icons/info-circle.png",
    "fit_assets/templates/*.html",
    "fit_assets/images/logo-640x640.png"
]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
PySide6 = "6.9.0"
requests = "^2.31"
python-whois = "^0.9.5"
scapy = "^2.5.0"
nslookup = "^1.3.0"
xhtml2pdf = "^0.2.17"
jinja2 = "^3.1.6"
rfc3161ng = "^2.1.3"
pypdf = ">=5.8.0,<7.0.0"

fit-cases = {git = "https://github.com/fit-project/fit-cases.git", tag = "v1.0.0-rc1"}




[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers"
pythonpath = ["."]
markers = [
    "unit: fast isolated tests",
    "contract: interface and behavior contracts",
    "integration: tests that exercise multiple components together",
    "e2e: end-to-end UI workflow tests",
]
