[tool.poetry]
name = "fit-acquisition"
version = "1.0.0-rc1"
description = "Utilities and base classes for content acquisition, shared across FIT scraper modules."
authors = ["FIT Project"]
license = "LGPL-3.0-or-later"
packages = [
    { include = "fit_acquisition" }
]

exclude = ["fit_acquisition/ui/**", "tests/**"]

include = [
    "fit_assets/icons/info-circle.png",
    "fit_assets/templates/*.html",
    "fit_assets/images/logo-640x640.png"
]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
PySide6 = "6.9.0"
requests = "^2.31"
python-whois = "^0.9.5"
scapy = "^2.5.0"
nslookup = "^1.3.0"
xhtml2pdf = "^0.2.17"
jinja2 = "^3.1.6"
rfc3161ng = "^2.1.3"
pypdf = ">=5.8.0,<7.0.0"

fit-cases = {git = "https://github.com/fit-project/fit-cases.git", branch = "main"}




[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers"
pythonpath = ["."]
markers = [
    "unit: fast isolated tests",
    "contract: cross-module contract tests for public interfaces and integrations",
    "integration: integration tests with real external resources and dependencies",
    "e2e: end-to-end UI workflow tests",
]

[tool.ruff.lint.per-file-ignores]
"fit_acquisition/tasks/tasks_info_ui.py" = ["F401"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
disable_error_code = ["import-untyped", "import-not-found"]

[[tool.mypy.overrides]]
module = [
    "fit_common",
    "fit_common.*",
    "fit_configurations",
    "fit_configurations.*",
    "whois",
    "whois.*",
    "nslookup",
    "nslookup.*",
    "scapy",
    "scapy.*",
    "rfc3161ng",
    "rfc3161ng.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["fit_acquisition.logger"]
disable_error_code = ["method-assign", "misc", "assignment"]

[[tool.mypy.overrides]]
module = [
    "fit_acquisition.tasks.infinite_loop.packet_capture",
    "fit_acquisition.tasks.infinite_loop.screen_recorder",
    "fit_acquisition.tasks.network_tools.nslookup",
    "fit_acquisition.tasks.post_acquisition.hash",
    "fit_acquisition.tasks.post_acquisition.timestamp",
    "fit_acquisition.tasks.post_acquisition.pec.pec_and_download_eml",
]
disable_error_code = ["no-redef", "attr-defined"]
